Ajout de la recherche dans l'activité main

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,5 @@
 <resources>
     <string name="app_name">shiny</string>
     <string name="imgDescription">description</string>
+    <string name="search">recherche</string>
 </resources>
